Fix name wrapping on thumbnails

--- a/styles/arisjs.less
+++ b/styles/arisjs.less
@@ -218,13 +218,12 @@ h4:hover .object-id {
 }
 
 
-/* Media Editor */
+/* Media */
 
-.media-editor {
-	.thumbnail .caption {
-		p, div, h4 {
-			overflow: hidden;
-		}
+.thumbnail .caption {
+	p, div, h4 {
+		white-space: nowrap;
+		overflow: hidden;
 	}
 }
 
